# OpenChat

./: chatbot.py  pyproject.toml  requirements.txt  show_rag.py  streamlit_app.py  supabase_test.py
RAG_Application/: embeddings.py  query_data.py
RAG_Application/Documents/: Alice_in_wonderland.txt  Book2.txt
RAG_Application/chroma_data/: chroma.sqlite3
chroma_data/: chroma.sqlite3
